--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ WATCHPACK_IGNORE=node_modules/**,dist/**,*.log
 
 APP_ENV=dev
 REACT_APP_API_BASE_URL=https://jsonplaceholder.typicode.com
+# REACT_APP_API_BASE_URL=https://fakestoreapi.com
